# preconvert_numpy

./: Pipfile  README.md  clean.sh  lint.sh  pyproject.toml
preconvert_numpy/: __init__.py  converters.py
